# garden-tracker

./: .gitignore  README.md  docker-compose.yml
server/: Dockerfile  app.py  pyproject.toml  requirements.txt
