[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Ramsey Gavin <44215916+rgavin1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
